fix(Switch): focus glow in dark mode

--- a/src/assets/scss/extensions/_switch.scss
+++ b/src/assets/scss/extensions/_switch.scss
@@ -204,6 +204,22 @@ html.theme--dark {
           }
         }
       }
+
+      &:focus {
+        outline: none;
+        + .check {
+          box-shadow: 0 0 0.5em rgba($grey, 0.6);
+        }
+
+        &:checked + .check {
+          box-shadow: 0 0 0.5em rgba($dark-primary, 0.8);
+          @each $name, $color in $dark-colors {
+            &.is-#{$name} {
+              box-shadow: 0 0 0.5em rgba($color, 0.8);
+            }
+          }
+        }
+      }
     }
   }
 }
